kubernetes/worker-debian8.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker-debian8
  namespace: buildbarn
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: debian8
  template:
    metadata:
      annotations:
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
      labels:
        app: worker
        instance: debian8
    spec:
      containers:
      - args:
        - -browser-url=http://bb-browser.example.com/
        - -concurrency=4
        - -scheduler=scheduler-debian8:8981
        image: buildbarn/bb-worker:20190210T161704Z-6f6bded
        name: worker
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /worker
          name: worker
      - image: buildbarn/bb-runner-debian8:20190210T161704Z-6f6bded
        name: runner
        volumeMounts:
        - mountPath: /worker
          name: worker
      volumes:
      - configMap:
          name: config-storage-clients
        name: config
      - emptyDir: {}
        name: worker
