kubernetes/worker-ubuntu16-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu16-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu16-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu16-04
    spec:
      containers:
      - args:
        - /config/worker-ubuntu16-04.jsonnet
        image: buildbarn/bb-worker:20200511T200952Z-aebf2a6
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/tini, -v, -g, --, /bb/bb_runner, /config/runner-ubuntu16-04.jsonnet]
        image: l.gcr.io/google/rbe-ubuntu16-04@sha256:b516a2d69537cb40a7c6a7d92d0008abb29fba8725243772bdaf2c83f1be2272
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: bb-runner
          readOnly: true
      volumes:
      - name: bb-runner
        emptyDir: {}
      - name: configs
        projected:
          sources:
          - configMap:
              name: runner-ubuntu16-04
              items:
              - key: runner-ubuntu16-04.jsonnet
                path: runner-ubuntu16-04.jsonnet
          - configMap:
              name: worker-ubuntu16-04
              items:
              - key: worker-ubuntu16-04.jsonnet
                path: worker-ubuntu16-04.jsonnet
          - configMap:
              name: common
              items:
              - key: common.libsonnet
                path: common.libsonnet
      - emptyDir: {}
        name: worker
