kubernetes/worker-ubuntu22-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu22-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu22-04
    spec:
      containers:
      - args:
        - /config/worker-ubuntu22-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20261008T101024Z-582d07f
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/bb_runner, /config/runner-ubuntu22-04.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-22.04@sha256:dd7654ffb01d5b7b54b23b9ce928a1f7f2d08c7b3d7e320b6574b55d7ccde78b
        name: runner
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-ubuntu22-04.jsonnet
            path: runner-ubuntu22-04.jsonnet
          - key: worker-ubuntu22-04.jsonnet
            path: worker-ubuntu22-04.jsonnet
      - emptyDir: {}
        name: worker
