kubernetes/worker-ubuntu24-04.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-ubuntu24-04
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 8
  selector:
    matchLabels:
      app: worker
      instance: ubuntu24-04
  template:
    metadata:
      labels:
        app: worker
        instance: ubuntu24-04
    spec:
      containers:
      - args:
        - /config/worker-ubuntu24-04.jsonnet
        image: ghcr.io/buildbarn/bb-worker:20260326T163248Z-e6ab874
        name: worker
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
      - command: [/bb/bb_runner, /config/runner-ubuntu24-04.jsonnet]
        image: ghcr.io/catthehacker/ubuntu:act-24.04@sha256:eb153df03ca81e75f73d40a2b14b5dbd2605e7813556efab47b23dfbfceeaa9d
        name: runner
        ports:
        - containerPort: 50051
          name: grpc
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 5
          periodSeconds: 5
        securityContext:
          runAsUser: 65534
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /config/
          name: configs
          readOnly: true
        - mountPath: /worker
          name: worker
        - mountPath: /bb
          name: empty
          readOnly: true
      volumes:
      - name: empty
        emptyDir: {}
      - name: configs
        configMap:
          name: buildbarn-config
          items:
          - key: common.libsonnet
            path: common.libsonnet
          - key: runner-ubuntu24-04.jsonnet
            path: runner-ubuntu24-04.jsonnet
          - key: worker-ubuntu24-04.jsonnet
            path: worker-ubuntu24-04.jsonnet
      - emptyDir: {}
        name: worker
