kubernetes/event-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
      - image: buildbarn/bb-event-service:20200102T104139Z-c01f79c
        args:
        - /config/event-service.jsonnet
        name: event-service
        ports:
        - containerPort: 8985
          protocol: TCP
        volumeMounts:
        - mountPath: /config/event-service.jsonnet
          name: config
          subPath: event-service.jsonnet
        - mountPath: /config/common.libsonnet
          name: common
          subPath: common.libsonnet
      volumes:
      - configMap:
          name: event-service
        name: config
      - configMap:
          name: common
        name: common
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: event-service
  namespace: buildbarn
spec:
  ports:
  - port: 8985
    protocol: TCP
    name: grpc
  selector:
    app: event-service
  type: LoadBalancer
