kubernetes/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        prometheus-scraping: "true"
    spec:
      containers:
        - image: docker.io/postgres:18-alpine
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: buildbarn
spec:
  ports:
    - port: 5432
      protocol: TCP
      name: listen
  selector:
    app: postgres
---
