kubernetes/scheduler-debian8.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scheduler-debian8
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
      instance: debian8
  template:
    metadata:
      labels:
        app: scheduler
        instance: debian8
    spec:
      containers:
      - args:
        - /config/scheduler.json
        image: buildbarn/bb-scheduler:20190617T153934Z-810b6b8
        name: scheduler
        ports:
        - containerPort: 8981
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - configMap:
          name: scheduler
        name: config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: scheduler-debian8
  namespace: buildbarn
spec:
  ports:
  - port: 8981
    protocol: TCP
  selector:
    app: scheduler
    instance: debian8
  type: ClusterIP
