kubernetes/scheduler-ubuntu16-04.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: scheduler-ubuntu16-04
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
      instance: ubuntu16-04
  template:
    metadata:
      labels:
        app: scheduler
        instance: ubuntu16-04
    spec:
      containers:
      - image: buildbarn/bb-scheduler:20190210T161704Z-6f6bded
        name: scheduler
        ports:
        - containerPort: 8981
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: scheduler-ubuntu16-04
  namespace: buildbarn
spec:
  ports:
  - port: 8981
    protocol: TCP
  selector:
    app: scheduler
    instance: ubuntu16-04
  type: ClusterIP
